bad/bin_op_ne_void_class.example_compiler_output
ERROR
[1mbad/bin_op_ne_void_class.lat:6:8: [1;31merror: [0;1moperator != cannot compare values of types `void` and `Y` because values are not convertible to either of the two types[m
	foo() != new Y;
	      [1;32m^[m
